WIP: Make ElectionTerm immutable
JIRA: CONTROLLER-2127
Change-Id: I456a85dc96a01627c89a74d57520a8179dc9b4f9
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>