@@ -45,7 +45,6 @@ import com.google.common.util.concurrent.Uninterruptibles;
 import com.typesafe.config.ConfigFactory;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -1286,7 +1285,7 @@ public class DistributedDataStoreRemotingIntegrationTest extends AbstractTest {
         final NormalizedNode snapshotRoot = AbstractShardTest.readStore(tree, YangInstanceIdentifier.of());
         final Snapshot initialSnapshot = Snapshot.create(
                 new ShardSnapshotState(new MetadataShardDataTreeSnapshot(snapshotRoot)),
-                Collections.emptyList(), 5, 1, 5, 1, 1, null, null);
+                List.of(), 5, 1, 5, 1, 1, null, null);
         InMemorySnapshotStore.addSnapshot(leaderCarShardName, initialSnapshot);
 
         InMemorySnapshotStore.addSnapshotSavedLatch(leaderCarShardName);
